force-app/main/default/objects/SBQQ__TemplateSection__c/SBQQ__TemplateSection__c.object-meta.xml
<CustomObject>
    <customHelpPage>SBQQ__TemplateSectionHelp</customHelpPage>
    <description>Section of content displayed on specific template.</description>
    <label>Template Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>