force-app/main/default/objects/SBQQ__TemplateSection__c/fields/SBQQ__BorderColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BorderColor__c</fullName>
        <description>Color of table borders expressed as a hexadecimal value.</description>
        <inlineHelpText>Color of table borders expressed as a hexadecimal value.</inlineHelpText>
        <label>Border Color</label>
        <length>6</length>
        <type>Text</type>
    </CustomField>