force-app/main/default/objects/SBQQ__TemplateSection__c/fields/SBQQ__BottomMargin__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BottomMargin__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Margin left at the bottom of this section.</description>
        <inlineHelpText>Margin left at the bottom of this section.</inlineHelpText>
        <label>Bottom Margin</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>