force-app/main/default/objects/SBQQ__TemplateSection__c/fields/SBQQ__ColumnHeaderHidden__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ColumnHeaderHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether column header is displayed or not. Only applies to sections pointing to template content of type &quot;Line Items&quot;.</description>
        <inlineHelpText>Select the checkbox to hide the column header. Only applies to sections pointing to template content of type &quot;Line Items&quot;.</inlineHelpText>
        <label>Hide Column Header</label>
        <type>Checkbox</type>
    </CustomField>