force-app/main/default/objects/SBQQ__TemplateSection__c/fields/SBQQ__ConditionalPrintField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConditionalPrintField__c</fullName>
        <description>Field on quote object that controls whether this section prints on generated PDF documents.</description>
        <inlineHelpText>Field on quote object that controls whether this section prints on generated PDF documents.</inlineHelpText>
        <label>Conditional Print Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group Line Items</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>