force-app/main/default/objects/SBQQ__TemplateSection__c/fields/SBQQ__Content__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source of content for this section.</description>
        <inlineHelpText>Select the template content to display in this template section.</inlineHelpText>
        <label>Content</label>
        <referenceTo>SBQQ__TemplateContent__c</referenceTo>
        <relationshipLabel>Template Sections</relationshipLabel>
        <relationshipName>TemplateSections</relationshipName>
        <type>Lookup</type>
    </CustomField>