force-app/main/default/objects/SBQQ__TemplateSection__c/fields/SBQQ__DisplayOrder__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DisplayOrder__c</fullName>
        <description>Order in which this section is rendered relative to other sections on the template.</description>
        <inlineHelpText>Specify the order (top down) in which this section is rendered relative to other sections on the template.</inlineHelpText>
        <label>Display Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>