force-app/main/default/objects/SBQQ__TemplateSection__c/fields/SBQQ__FilterField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FilterField__c</fullName>
        <description>Field used to filter records rendered by this section.</description>
        <inlineHelpText>Field used to filter records rendered by this section.</inlineHelpText>
        <label>Filter Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Optional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>