force-app/main/default/objects/SBQQ__TemplateSection__c/fields/SBQQ__FilterOperator__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FilterOperator__c</fullName>
        <description>Operator used for filtering records rendered by this section.</description>
        <inlineHelpText>Operator used for filtering records rendered by this section.</inlineHelpText>
        <label>Filter Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>