force-app/main/default/objects/SBQQ__TemplateSection__c/fields/SBQQ__FilterValue__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FilterValue__c</fullName>
        <description>Value used in filtering records rendered by this section.</description>
        <inlineHelpText>Value used in filtering records rendered by this section.</inlineHelpText>
        <label>Filter Value</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>