force-app/main/default/objects/SBQQ__TemplateSection__c/fields/SBQQ__GroupField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__GroupField__c</fullName>
        <description>Field used in grouping lines rendered by this section. Only applicable to Line Items section.</description>
        <inlineHelpText>Specify field used in grouping lines rendered by this section. Only applicable to Line Items section.</inlineHelpText>
        <label>Group Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Family</fullName>
                </value>
                <value>
                    <fullName>Subscription Category</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>