force-app/main/default/objects/SBQQ__TemplateSection__c/fields/SBQQ__KeepWithNext__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__KeepWithNext__c</fullName>
        <description>Imposes &quot;keep-with-next.within-page&quot; condition on this block of content.</description>
        <inlineHelpText>Specifies whether an attempt should be made to keep contents together on the same page with next block of content.</inlineHelpText>
        <label>Keep With Next</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                    <default>true</default>
                    <label>Auto</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>