force-app/main/default/objects/SBQQ__TemplateSection__c/fields/SBQQ__KeepWithPrevious__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__KeepWithPrevious__c</fullName>
        <description>Imposes &quot;keep-with-previous.within-page&quot; condition on this block of content.</description>
        <inlineHelpText>Specifies whether an attempt should be made to keep contents together on the same page with previous block of content.</inlineHelpText>
        <label>Keep With Previous</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>