force-app/main/default/objects/SBQQ__TemplateSection__c/fields/SBQQ__PageBreak__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PageBreak__c</fullName>
        <description>Specifies page breaking behavior for this content.</description>
        <inlineHelpText>Specifies whether page break should be inserted before, after or both before/after this content.</inlineHelpText>
        <label>Page Break</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Before</fullName>
                </value>
                <value>
                    <fullName>After</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>