force-app/main/default/objects/SBQQ__TemplateSection__c/fields/SBQQ__QuoteTotalsPrinted__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuoteTotalsPrinted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Forces quote totals to print after line items rendered by this section.</description>
        <inlineHelpText>Select the checkbox to print quote totals after this section. Only applicable to Line Items sections.</inlineHelpText>
        <label>Print Quote Totals</label>
        <type>Checkbox</type>
    </CustomField>