force-app/main/default/objects/SBQQ__TemplateSection__c/fields/SBQQ__SummaryDisplay__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SummaryDisplay__c</fullName>
        <description>Specifies how line items rendered by this section are summarized.</description>
        <inlineHelpText>Choose &quot;Always&quot; to display subtotal, discounts and grand total regardless of any other settings. Choose &quot;Never&quot; to never display regardless of other settings. Leaving this field blank will render summary as defined by template fields.</inlineHelpText>
        <label>Summary Display</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>