force-app/main/default/objects/SBQQ__TemplateSection__c/fields/SBQQ__Template__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Template__c</fullName>
        <description>Quote template that uses this template section.</description>
        <inlineHelpText>Quote template that uses this template section.</inlineHelpText>
        <label>Template</label>
        <referenceTo>SBQQ__QuoteTemplate__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>